--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "matrikspa",
   "private": true,
+  "version": "0.0.0",
+  "description": "Matrik Single Page Website",
+  "repository": "https://github.com/ialserda-matrik/matrik-spa",
   "devDependencies": {
     "autoprefixer-core": "^5.2.1",
     "grunt": "^0.4.5",
@@ -31,9 +34,13 @@
     "jit-grunt": "^0.9.1",
     "jshint-stylish": "^1.0.0",
     "karma": "^0.13.19",
+    "karma-chrome-launcher": "^0.1.12",
+    "karma-firefox-launcher": "^0.1.7",
     "karma-jasmine": "*",
+    "karma-junit-reporter": "^0.2.2",
     "karma-phantomjs-launcher": "*",
     "phantomjs-prebuilt": "^2.1.4",
+    "protractor": "^2.1.0",
     "time-grunt": "^1.0.0"
   },
   "engines": {
